# Pramana.AI

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  Makefile  langgraph.json  pramana.db  pyproject.toml
backend/src/: pramana.db
backend/src/agent/: app.py  chatbot_graph.py  configuration.py  deep_researcher.py  insights_graphs.py  math_agent.py  mcp_agent.py  prompts.py  state.py  utils.py
backend/src/agent/portfolio/: __init__.py  config.py  heuristics.py  orchestrator.py  prompts.py  state.py
backend/src/auth/: __init__.py  app.py  chat_routes.py  database.py  models.py  routes.py  schemas.py  utils.py
backend/src/connectors/: __init__.py  base.py  exim.py  internal.py  iqvia.py  patents.py  trials.py  web.py
backend/src/tools/: mcp_loader.py
docs/: README.md  agents.md  api.md  architecture.md  backend.md  configuration.md  deployment.md  development.md  frontend.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  global.css
frontend/src/components/: ActivityTimeline.tsx  AiBubbleWrapper.tsx  ChatApp.tsx  ChatAppWithSidebar.tsx  ChatMessagesView.tsx  ChatSidebar.tsx  FollowUpSuggestions.tsx  InlineChatGraph.tsx  InputForm.tsx  SequentialThinkingFlow.tsx  ThinkingDropdown.tsx  ToolMessageDisplay.tsx  TypewriterText.tsx  WelcomeScreen.tsx
frontend/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/components/insights/: CompetitionHeatmap.tsx  InsightTooltipCard.tsx  MarketGrowth.tsx  OpportunityRadar.tsx  PatentTimeline.tsx  Signals.tsx  index.ts
frontend/src/components/landing/: AppMockup.tsx  CTA.tsx  Comparison.tsx  Features.tsx  Footer.tsx  HeroSection.tsx  LandingPage.tsx  index.ts  (+3 more)
frontend/src/lib/: auth.ts  chatService.ts  workflowMapping.ts
frontend/src/types/: agents.ts  models.ts  workflow.ts
frontend/src/utils/: animationConfig.ts
src/: App.jsx  index.css
src/components/: AppMockup.jsx  CTA.jsx  Comparison.jsx  Features.jsx  Footer.jsx  HeroSection.jsx  Navigation.jsx  Portfolio.jsx  SaiSection.jsx
src/utils/: animationConfig.js
(+9 files in other folders)
